--- a/package.json
+++ b/package.json
@@ -14,9 +14,18 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
-    "next": "13.3.1",
+    "firebase": "^8.10.1",
+    "firebase-admin": "^11.7.0",
+    "next": "13.3.2",
+    "next-firebase-auth": "^0.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.10",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/firebase": "^3.2.1",
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.1.1"
   }
 }
