--- a/package.json
+++ b/package.json
@@ -7,21 +7,22 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json}\""
+    "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json}\"",
+    "npm:outdated": "npx -y npm-check-updates"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.7",
-    "@types/node": "18.16.0",
-    "@types/react": "18.0.38",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
+    "@types/node": "18.16.6",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
+    "eslint": "8.40.0",
+    "eslint-config-next": "^13.4.1",
     "firebase": "^8.10.1",
-    "firebase-admin": "^11.7.0",
-    "next": "13.3.2",
+    "firebase-admin": "^11.8.0",
+    "next": "^13.4.1",
     "next-firebase-auth": "^0.15.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "styled-components": "^5.3.10",
     "typescript": "5.0.4"
   },
