--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "no-unused-vars": [
-      2,
-      {
-        "argsIgnorePattern": "^_"
-      }
-    ]
-  }
+  "extends": "next/core-web-vitals"
 }
