--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "18.16.6",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "dayjs": "^1.11.7",
     "eslint": "8.40.0",
     "eslint-config-next": "^13.4.1",
     "firebase": "^8.10.1",
