--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "^13.4.1",
     "firebase": "^8.10.1",
     "firebase-admin": "^11.8.0",
+    "lodash-es": "^4.17.21",
     "next": "^13.4.1",
     "next-firebase-auth": "^0.15.0",
     "react": "^18.2.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/firebase": "^3.2.1",
+    "@types/lodash-es": "^4.17.7",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.1.1",
     "prettier": "2.8.8"
