--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json}\"",
     "npm:outdated": "npx -y npm-check-updates",
-    "component": "./create-component.sh"
+    "component": "./create-component.sh",
+    "exports": "./export-index.sh"
   },
   "engines": {
     "node": ">=18.0.0",
