--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-number-format": "^5.2.2",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.10",
     "typescript": "5.0.4",
