--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-hook-form": "^7.43.9",
     "react-number-format": "^5.2.2",
     "react-toastify": "^9.1.3",
