--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "firebase-admin": "^12.1.0",
     "lodash-es": "^4.17.21",
     "next": "^13.4.1",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
